<resources>

    <string name="app_name">Top GitHub</string>

    <!--Generics-->
    <string name="cancel">Cancel</string>

    <!--Menu's actions name -->
    <string name="action_calendar">Choose period</string>

    <!--Menu's action descriptions-->
    <string name="period_today">Today</string>
    <string name="period_last_week">Last week</string>
    <string name="period_last_month">Last month</string>
    <string name="period_last_year">Last year</string>

    <!--Repository rows-->
    <string name="row_subtitle">%1$s • %2$s stars %3$s • Built by</string>
    <string name="row_subtitle_no_lang">%1$s stars %2$s • Built by</string>

    <!--Main views -->
    <string name="no_connection_title">No connection</string>
    <string name="no_connection_content">We could not establish a connection with GitHub servers. Try again when you are connected to the internet.</string>
    <string name="no_connection_button">Try Again</string>
    <string name="empty_list_title">No Results</string>
    <string name="empty_list_content">Please change your search</string>
    <string name="error_title">Error</string>
    <string name="error_content">%1$s\nPlease, try again in a minute or change your search.\n GitHub has a 10 requests limit per minute.</string>
    <string name="error_button">Try again</string>

    <!--Drawer-->
    <string name="drawer_header">Languages</string>

    <!--LanguageFragment-->
    <string name="select_languages">Select languages:</string>

    <!--Content descriptions-->
    <string name="cd_change_languages">Change languages</string>
    <string name="cd_language">Language</string>
    <string name="cd_owner">Repository owner</string>
    <string name="cd_no_connection">No connection</string>
    <string name="cd_no_result">No results</string>
    <string name="cd_error">Error</string>

    <!--Sharing dialog-->
    <string name="share_subject">Share with:</string>

    <!--Snackbar messages-->
    <string name="sb_copied">URL copied to clipboard.</string>

</resources>
